quick spacing fix

--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -10,7 +10,7 @@
 }
 
 .MuiIconButton-root {
-    padding: 16px !important;
+    padding: 25px !important;
 }
 
 .MuiListItemIcon-root {
